# CarbonMint-Contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
benches/: buy_benchmark.rs
docs/: architecture.md  audit-preparation.md  authorization.md  cli-usage.md  contributing-guide.md  deployment-funding.md  deployment-guide.md  edge-cases.md  error-handling.md  error-reference.md  examples-advanced.md  glossary.md  invariants.md  known-limitations.md  mainnet-checklist.md  math-module.md  observability.md  performance-notes.md  property-tests.md  release-process.md  replay-protection.md  resource-limits.md  state-transitions.md  storage-model.md  testing-guide.md  testnet-deployment.md  threat-model.md  ttl-and-rent.md  versioning.md
docs/adr/: 0001-use-soroban-sdk-21-x.md  0002-compile-as-a-cdylib-for-wasm32.md  0003-adopt-no-std-for-the-contract-crate.md  0005-define-a-ttl-bump-strategy-for-persistent-entries.md  0006-model-errors-with-a-contracterror-enum.md  0008-require-auth-on-all-state-changing-entrypoints.md  0013-document-an-upgrade-and-migration-path.md  0014-follow-semantic-versioning.md  0015-embed-contractmeta-metadata.md  0016-standardize-the-unit-test-module-layout.md  0017-use-testutils-for-contract-tests.md  0018-test-against-a-mock-token-contract.md  (+8 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
scripts/: smoke-test-testnet.sh  test-smoke-test-testnet.sh
src/: bench_support.rs  debug_assertions.rs  error.rs  events.rs  fuzz_harness.rs  lib.rs  math.rs  storage.rs  test.rs  types.rs
