[package]
name = "carbonmint-contract"
version = "0.2.0"
edition = "2021"
authors = ["arisu6804 <arisu6804@gmail.com>"]
license = "MIT"
description = "CarbonMint: a tokenized carbon-credit marketplace smart contract for Stellar Soroban"
repository = ""
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.7.6"
ed25519-dalek = "=2.2.0"

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
